# demo-repo

./: CMakeLists.txt  README.md  main.cc  myscript.sh
.github/workflows/: ci-cd.yml  send-telegram-msg.yml
bullet_project/: CMakeLists.txt  main.cpp
design-patterns/: CMakeLists.txt  main.cc
design-patterns/include/: AbstractFactory.h  Factory.h  Observer.h  Singleton.h
design-patterns/src/: AbstractFactory.cc  Factory.cc  Observer.cc  Singleton.cc
docker-demo/: Dockerfile  app.py
dynamic_link_project/: CMakeLists.txt  README.md  library.cc  library.h  main  main.cc
http_request_project/: CMakeLists.txt  main.cpp
static_link_project/: CMakeLists.txt  README.md  main.cc  test_tool.cc  tool.cc  tool.h
static_link_project/test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
